# Machine_Learning_Foundations

./: Employee_Burnout_Rate.ipynb  README.md  main.py  pyproject.toml
Classification/: Credit_Risk_Modelling.ipynb  credit_risk_model.pkl
Linear_Regression/: Employee_Burnout_Rate.ipynb  Intro_to_Machine_Learning.ipynb  Yield_prediction.ipynb
